@@ -1,9 +1,16 @@
+2007-09-23  Ross Burton  <ross@burtonini.com>
+
+	* src/actions.c:
+	Handle wnck_screen_get_active_workspace() failing by then trying
+	to get the 0th workspace.  Also clean up func_center a
+	little. (#343546).
+
 2007-07-04  Ross Burton  <ross@burtonini.com>
 
 	* src/actions.[ch]:
 	* src/parser.c:
 	Add change_workspace, to change the active workspace (#453464,
-        thanks Adam Więckowski).
+	thanks Adam Więckowski).
 
 2007-06-22  Ross Burton  <ross@burtonini.com>
 
